--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
   search-module:
     image: 1151997/automation-code:latest
     volumes:
-      - .\output[volume-mapped]\search-module:/code/test-output
+      - ./output[volume-mapped]/search-module:/code/test-output
     environment:
       - HOST=hub
       - BROWSER=chrome
@@ -45,7 +45,7 @@ services:
   book-flight-module:
     image: 1151997/automation-code:latest
     volumes:
-      - .\output[volume-mapped]\book-flight-module:/code/test-output
+      - ./output[volume-mapped]/book-flight-module:/code/test-output
     environment:
       - HOST=hub
       - BROWSER=firefox
